--- a/localizao.html
+++ b/localizao.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Localização</title>
+    <link rel="stylesheet" href="estilo(1).css">
 </head>
 <body>
-    <h1> Sua localização é: </h1>
-    <h2></h2>
-    <script src="script.js"></script>
+    <div id="map"> </div>
+
+
+
+
+
+<footer> <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script> 
+</footer>   
 </body>
+<script src="script.js"></script>
 </html>
