--- a/localizao.html
+++ b/localizao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Localização</title>
-    <link rel="stylesheet" href="estilo(1).css">
+    <link rel="stylesheet" href="css/estilo(1).css">
 </head>
 <body>
     <div id="map"> </div>
@@ -22,5 +22,5 @@
     crossorigin=""></script> 
 </footer>   
 </body>
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </html>
