--- a/localizao.html
+++ b/localizao.html
@@ -1,26 +1,35 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Localização</title>
-    <link rel="stylesheet" href="css/estilo(1).css">
-</head>
-<body>
-    <div id="map"> </div>
+/* index */
+.header_alinhamento {
+  display: flex;
+}
 
+.head_1 {
+  border-bottom: 2px solid rgb(0, 195, 255);
+  display: inline-block;
+}
 
+.head_2 {
+  border-bottom: 2px solid rgb(0, 67, 192);
+  display: inline-block;
+}
 
+.botao_login {
+  background-color: #0130ff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
+.botao_login:hover {
+  background-color: #04a0e9;
+}
 
-<footer> <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""/>
+/* teste para definir loc*/
+#map {
+  height: 600px;
+}
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""></script> 
-</footer>   
-</body>
-<script src="js/script.js"></script>
-</html>
+/* teste para definir loc*/
+
