--- a/mapa_takebuss.html
+++ b/mapa_takebuss.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
-    <title>mapa</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
+    <title>Tentei um novo mapinha</title>
 </head>
 <body>
-    <div>
-        <div>
-        <input type="text" id="txtBusca" placeholder="Buscar..."/>
-  <img src="/CSS/search3.png" id="btnBusca" alt="Buscar"/></div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253418.18941818996!2d-41.64814067310967!3d-7.049272280055616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x79c113c507c8bf3%3A0x6a86e398ebbf77c7!2sPicos%20-%20PI!5e0!3m2!1spt-BR!2sbr!4v1710872795444!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
+    <div id="map">
+        
+    </div>
+    
 </body>
-</html> 
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
+</html>
