atualização de tela

--- a/tela_teste.html
+++ b/tela_teste.html
@@ -7,12 +7,23 @@
     <title>Projeto programadorBR</title>
   <link rel="stylesheet" href="css/style_teste.css" />
 </head>
-<body><div id="map"></div>
+<body>
+  <header>
+    <div class="cabeçalho_rota3">  
+        <h3 class="primeiro">Tak</h3><h3 class="segundo">eBuss</h3>
+    </div> 
+  </header> 
+  <div class="casa_tamanho"> <ion-icon class="home" name="home-outline"></ion-icon> </div>
+  <div id="map"></div>
   
+<main>
+ <div class="onibus_tamanho"> <ion-icon class="bus" name="bus-outline"></ion-icon> </div>
+ <div class="onibus_tamanho"> <ion-icon class="bus" name="bus-outline"></ion-icon> </div>
+ <div class="seta"> <ion-icon class="volta" name="arrow-back-outline"></ion-icon> </div>
+ <div class="comunidade"> <ion-icon class= "pessoas"  name="people-outline"></ion-icon></div>
+</main>
   
-  
-  
-  
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
   integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
   crossorigin=""/>
@@ -23,6 +34,10 @@
   
   
 </body>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script src="js/script_teste.js"></script>
 </html>
+
+
  
