--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>index</title>
 </head>
 <body>
- <header>
+<header>
     <div class="header_alinhamento">
-   <h2><span class="head_1">Take</span><span class="head_2">buss</span><ion-icon name="person-circle-outline"></ion-icon></h2>
-   <button class="botao_login">login</button>
-   <main>
+        <h2 class="logo"><span class="head_1">Take</span><span class="head_2">buss</span><ion-icon name="person-circle-outline"></ion-icon></h2>
+    </div>
+</header>
 
-    
-   </main>
-</div>
-</header>   
-</body>
+<main>
+    <div class="login_container">
+        <input type="text" placeholder="Usuário" class="input_text">
+        <input type="password" placeholder="Senha" class="input_text">
+        <button class="botao_login">Login</button>
+        <button class="botao_google">Login com <img src="css/Google_Icons-09-512.webp" class="google_icon"></button>
+        <a href="registro.html"> <button class="botao_registrar">Registrar</button> </a>
+    </div>
+</main>
+
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
 </html>
