--- a/tela_teste.html
+++ b/tela_teste.html
@@ -7,7 +7,7 @@
     <title>Projeto programadorBR</title>
   <link rel="stylesheet" href="css/estilo.css" />
 </head>
-<body>
+<body class="tela_teste">
   <header>
     <div class="cabeçalho_rota3">  
         <h3 class="primeiro">Tak</h3><h3 class="segundo">eBuss</h3>
