--- a/registro.html
+++ b/registro.html
@@ -25,4 +25,9 @@
     </form>
   </div>
 </body>
+<script type="module">
+  import login from "";
+  login.login();
+  login.verificaUsuarioAutenticado();
+</script>
 </html>
