--- a/horarios (1).html
+++ b/horarios (1).html
@@ -8,9 +8,12 @@
     <title>TakeBuss</title>
 </head>
 <body class="horarios">
+
+<div class="horarios-rotas">
 <div class="nucleo">
 <h3 class="ho">Tak</h3> <h3 class="rar">ebuss</h3>
-<a href="menu.html"> <ion-icon class="home" name="home-outline"></ion-icon> </a>
+</div>
+<a href="menu.html"> <ion-icon class="home" name="home-outline"></ion-icon></a>
 </div>
 <h3 class="esquerda">Horários do funcionamento:</h3>
 
