--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <input type="text" placeholder="Usuário" class="input_text">
         <input type="password" placeholder="Senha" class="input_text">
         <button class="botao_login">Login</button>
-        <button class="botao_google">Login com <img src="css/Google_Icons-09-512.webp" class="google_icon"></button>
+        <button>
+            <img src="imagens/google.png" alt="google">
+            <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=689853966923-e0boo3ldh7n6371gsu3pl5rrq8qretck.apps.googleusercontent.com&redirect_uri=https://goodshape.netlify.app/profissional/forma_pagamento&response_type=code&scope=profile&state=UNIQUE_RANDOM_VALUE">Entrar com Google</a></span>
+        </button>
         <a href="registro.html"> <button class="botao_registrar">Registrar</button> </a>
     </div>
 </main>
@@ -28,4 +31,3 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 <script src=""></script>
-</html>
