--- a/registro.html
+++ b/registro.html
@@ -25,9 +25,6 @@
     </form>
   </div>
 </body>
-<script type="module">
-  import login from "";
-  login.login();
-  login.verificaUsuarioAutenticado();
+<script src="js/account.js" type="module">
 </script>
 </html>
