--- a/registro.html
+++ b/registro.html
@@ -17,11 +17,11 @@
   <div class="login_container">
     <h2>Crie uma conta</h2>
     <form>
-      <input type="text" class="input_text" placeholder="Nome completo" required>
-      <input type="date" class="input_text" placeholder="Data de nascimento" required>
-      <input type="email" class="input_text" placeholder="Email" required>
-      <input type="password" class="input_text" placeholder="Crie uma senha" required>
-      <button type="submit" class="botao_registrar">Registrar</button>
+      <input id="nome" type="text" class="input_text" placeholder="Nome completo" required>
+      <input id="nascimento" type="date" class="input_text" placeholder="Data de nascimento" required>
+      <input id="email" type="email" class="input_text" placeholder="Email" required>
+      <input id="senha" type="password" class="input_text" placeholder="Crie uma senha" required>
+      <button id="salvar" type="submit" class="botao_registrar">Registrar</button>
     </form>
   </div>
 </body>
