--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="botao_login">Login</button>
         <button>
             <img src="imagens/google.png" alt="google">
-            <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=689853966923-e0boo3ldh7n6371gsu3pl5rrq8qretck.apps.googleusercontent.com&redirect_uri=https://goodshape.netlify.app/profissional/forma_pagamento&response_type=code&scope=profile&state=UNIQUE_RANDOM_VALUE">Entrar com Google</a></span>
+            <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=689853966923-e0boo3ldh7n6371gsu3pl5rrq8qretck.apps.googleusercontent.com&redirect_uri=https://https://takebuss.netlify.app/tela_teste.html_type=code&scope=profile&state=UNIQUE_RANDOM_VALUE">Entrar com Google</a></span>
         </button>
         <a href="registro.html"> <button class="botao_registrar">Registrar</button> </a>
     </div>
