--- a/login.html
+++ b/login.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar Usuário</title>
+    <title>Login</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <div class="container">
         <div class="form-card">
-            <h1 class="form-title">Registrar Usuário</h1>
+            <h1 class="form-title">Login</h1>
             <form action="#" method="POST" class="form">
-                <div class="form-group">
-                    <label for="nome" class="form-label">Nome Completo</label>
-                    <input type="text" id="nome" name="nome" class="form-input" required>
-                </div>
                 <div class="form-group">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" id="email" name="email" class="form-input" required>
@@ -23,11 +19,8 @@
                     <label for="senha" class="form-label">Senha</label>
                     <input type="password" id="senha" name="senha" class="form-input" required>
                 </div>
-                <div class="form-group">
-                    <label for="confirmar-senha" class="form-label">Confirmar Senha</label>
-                    <input type="password" id="confirmar-senha" name="confirmar-senha" class="form-input" required>
-                </div>
-                <button type="submit" class="form-button">Registrar</button>
+                <button type="submit" class="form-button">Entrar</button>
+                <p class="form-footer">Ainda não possui uma conta? <a href="index.html" class="form-link">Registre-se</a></p>
             </form>
         </div>
     </div>
