parte grafica ok

--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrar Usuário</title>
-    <link rel="stylesheet" href="css/estilo.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registro</title>
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <div class="container">
-        <div class="form-card">
-            <h1 class="form-title">Registrar Usuário</h1>
-            <form action="#" method="POST" class="form">
-                <div class="form-group">
-                    <label for="nome" class="form-label">Nome Completo</label>
-                    <input type="text" id="nome" name="nome" class="form-input" required>
-                </div>
-                <div class="form-group">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" id="email" name="email" class="form-input" required>
-                </div>
-                <div class="form-group">
-                    <label for="senha" class="form-label">Senha</label>
-                    <input type="password" id="senha" name="senha" class="form-input" required>
-                </div>
-                <div class="form-group">
-                    <label for="confirmar-senha" class="form-label">Confirmar Senha</label>
-                    <input type="password" id="confirmar-senha" name="confirmar-senha" class="form-input" required>
-                </div>
-                <button type="submit" class="form-button">Registrar</button>
-            </form>
+  <div class="container">
+    <div class="form-card">
+      <h2 class="form-title">Crie sua Conta</h2>
+      <form class="form" action="/registro" method="POST">
+        <div class="form-group">
+          <label for="name" class="form-label">Nome</label>
+          <input type="text" id="name" class="form-input" name="name" required>
         </div>
+        <div class="form-group">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" id="email" class="form-input" name="email" required>
+        </div>
+        <div class="form-group">
+          <label for="password" class="form-label">Senha</label>
+          <input type="password" id="password" class="form-input" name="password" required>
+        </div>
+        <div class="form-group">
+          <label for="confirm-password" class="form-label">Confirmar Senha</label>
+          <input type="password" id="confirm-password" class="form-input" name="confirm-password" required>
+        </div>
+        <button href="login.html" type="submit" class="form-button">Cadastrar</button>
+      </form>
+      <div class="form-footer">
+        <p>Já tem uma conta? <a href="login.html" class="form-link">Faça login</a></p>
+      </div>
     </div>
+  </div>
 </body>
 </html>
