--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <form class="form" action="/registro" method="POST">
         <div class="form-group">
           <label for="name" class="form-label">Nome</label>
-          <input type="text" id="name" class="form-input" name="name" required>
+          <input type="text" id="nome" class="form-input" name="name" required>
         </div>
         <div class="form-group">
           <label for="email" class="form-label">Email</label>
@@ -21,13 +21,9 @@
         </div>
         <div class="form-group">
           <label for="password" class="form-label">Senha</label>
-          <input type="password" id="password" class="form-input" name="password" required>
+          <input type="password" id="senha" class="form-input" name="password" required>
         </div>
-        <div class="form-group">
-          <label for="confirm-password" class="form-label">Confirmar Senha</label>
-          <input type="password" id="confirm-password" class="form-input" name="confirm-password" required>
-        </div>
-        <button href="login.html" type="submit" class="form-button">Cadastrar</button>
+        <button href="login.html" type="submit" id="salvar">Cadastrar</button>
       </form>
       <div class="form-footer">
         <p>Já tem uma conta? <a href="login.html" class="form-link">Faça login</a></p>
