--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="form-card">
       <h2 class="form-title">Crie sua Conta</h2>
-      <form class="form" action="/registro" method="POST">
+      <form class="form" action="" method="POST">
         <div class="form-group">
           <label for="name" class="form-label">Nome</label>
           <input type="text" id="nome" class="form-input" name="name" required>
