--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <label for="password" class="form-label">Senha</label>
           <input type="password" id="senha" class="form-input" name="password" required>
         </div>
-        <button href="login.html" type="submit" id="salvar">Cadastrar</button>
+        <button type="submit" id="salvar">Cadastrar</button>
       </form>
       <div class="form-footer">
         <p>Já tem uma conta? <a href="login.html" class="form-link">Faça login</a></p>
