--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
     </div>
   </div>
 </body>
-<script src="js/account.js"></script>
+<script src="../takebuss-main/js/account.js"></script>
 </html>
